Solucionado el estilo vacio de la última página antes de las referencias

--- a/main.tex
+++ b/main.tex
@@ -160,6 +160,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%% Referencias %%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
 \pagestyle{empty}
 \bibliographystyle{unsrt}
 \bibliography{src/ref/bibliography}
