Página en modo apaisado

--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,8 @@
 \usepackage{pifont}
 \usepackage{appendix}
 \usepackage{float}
+\usepackage{minted}
+\usepackage{pdflscape}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%% Selección de fuente %%%%%%%%%%%%%%%%%%%%
